@@ -15,6 +15,8 @@ Version 1.7.4
        doesn't work correctly. (Stefan)
 - BUG: Issue #177: TortoiseMerge shows
        long lines incorrect. (Stefan)
+- BUG: Issue #178: copy of changed files list when
+       sorted copies wrong items. (Stefan)
 
 Version 1.7.3
 - BUG: Issue #149: Crash in OpenSSL. (Stefan)
